# python-css

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: unit-test.yaml
src/color/: __init__.py  color.py  conversion.py
src/color/defined/: __init__.py
tests/: data.json  hsl_color.json  test_color.py  test_conversion.py
